<resources>
    <string name="app_name">모이개</string>
    <string name="login">로그인</string>
    <string name="sign_in">회원가입</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="google_login">구글 로그인</string>
    <string name="email">이메일</string>
    <string name="term_title">약관에 동의해주세요</string>
    <string name="term_middle_title">개인정보 이용 및 서비스 이용관리에 동의해주세요</string>
    <string name="agree">모두 동의</string>
    <string name="agree_desc">서비스 이용을 위해 아래 약관에 모두 동의합니다</string>
    <string name="term1">(필수) 만 14세 이상입니다</string>
    <string name="term2">(필수) 서비스 이용약관 동의</string>
    <string name="term3">(필수) 개인정보 처리방침 동의</string>
    <string name="term4">(필수) 커뮤니티 이용약관 동의</string>
    <string name="see">보기</string>
    <string name="term_complete">동의 완료</string>
    <string name="myGroupList">모임 내역</string>
    <string name="leaderGroup">진행 모임</string>
    <string name="memberGroup">참여 모임</string>
    <string name="subscription">가입신청</string>
    <string name="Approve">가입승인</string>
    <string name="approve">승인</string>
    <string name="reject">거절</string>
    <string name="leaderGroupNoResult">진행중인 모임이 없습니다</string>
    <string name="memberGroupNoResult">참여중인 모임이 없습니다</string>
    <string name="approveNoResult">신청 내역이 없습니다</string>
    <string name="private_termTitle">"개인정보 처리방침 동의</string>
    <string name="private_term">"□ 개인정보 제3자 제공 동의



제 1 조 (개인정보의 수집 및 이용 목적)

모든 이용자는 회사가 제공하는 서비스를 이용할 수 있고, 회원가입을 통해 더욱 다양한 서비스를 제공받을 수 있으며, 아래의 원칙을 준수하고 있습니다.
수집한 이용자의 개인정보는 다음과 같은 목적으로만 이용하며, 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.

[1] 서비스 제공에 필요한 최소한의 개인정보를 수집하고 있습니다.
필수정보란?: 해당 서비스의 본질적 기능을 수행하기 위한 정보
선택정보란?: 보다 특화된 서비스를 제공하기 위해 추가 수집하는 정보(선택 정보를 입력하지 않은 경우에도 서비스 이용 제한 없습니다.)

[2] 민감정보를 수집하지 않습니다.
민감정보란?: 이용자의 소중한 인권을 침해할 우려가 있는 정보
(인종, 사상 및 신조, 정치적 성향이나 범죄기록, 의료정보 등)
단, 법령에서 민감 정보의 처리를 요구하거나 허용하는 경우에는 반드시 사전에 이용자에게 해당 사실을 알리고 동의를 구하도록 하겠습니다.

[회원 가입 및 서비스 이용]
회원 가입 방법(이메일 가입)에 따라 아래와 같은 정보를 필수 수집합니다.
- [필수정보] 이메일, 이름 또는 닉네임, 아이디, 비밀번호, 전화번호
서비스 이용에 필요한 정보를 선택 항목으로 수집합니다.
- [선택정보] 관심 개발 직군, 사용했던 프로그램, 기술스택, 포트폴리오, 프로필 이미지 등

※ 개인정보 제공에 대한 동의를 거부할 권리가 있습니다.
그러나 동의를 거부할 경우 앱 이용에 제한을 받을 수 있습니다.

□ 개인정보 보유 및 이용기간 고지
개인정보 보호를 위해 회원님의 정보는 회원 탈퇴 시 자동으로 파기됩니다.
수집 목적 달성 시까지 법령에서 정한 기간 동안 개인정보를 보유할 것이며, 보유 기간 경과 시 수집된 개인정보는 지체 없이 파기됩니다.

□ 개인정보 수집․이용 동의
※ 위와 같이 개인정보를 수집‧이용하는 데 동의를 거부할 권리가 있습니다. 그러나 동의를 거부할 경우 일부 서비스를 제공 받으실 수 없습니다.


개인정보 처리방침 시행일자 : 2024년 06월 18일

</string>
    <string name="service_term_title">"서비스 이용약관 동의"</string>
    <string name="service_term"> "□ 앱 서비스 이용약관 동의 사항

제 1 조 (목적)

이 약관은 모이개 커뮤니티(이하 "서비스")의 이용 조건 및 절차, 권리와 의무, 책임 사항 및 기타 필요한 사항을 규정함을 목적으로 합니다.

제 2 조 (용어의 정의)

"서비스"라 함은 모이개 커뮤니티에서 제공하는 모든 서비스 및 관련 제반 서비스를 의미합니다.
"회원"이라 함은 이 약관에 동의하고 서비스를 이용하는 이용자를 의미합니다.
"계정"이라 함은 회원의 식별과 서비스 이용을 위해 회원이 설정한 아이디와 비밀번호를 의미합니다.

제 3 조 (약관의 효력과 변경)

이 약관은 회원이 서비스 가입 시 약관에 동의함으로써 효력이 발생합니다.
회사는 필요시 관련 법령을 위배하지 않는 범위 내에서 이 약관을 변경할 수 있습니다. 변경된 약관은 공지사항을 통해 공지하며, 회원은 변경된 약관에 동의하지 않을 권리가 있습니다. 변경된 약관에 동의하지 않을 경우 서비스 이용을 중단하고 탈퇴할 수 있습니다.

제 4 조 (이용계약 체결)

이용계약은 회원이 되고자 하는 자(이하 "가입신청자")가 약관에 동의하고, 회사가 정한 절차에 따라 회원 가입을 완료함으로써 체결됩니다.
회사는 가입신청자의 신청에 대하여 서비스 이용을 승낙함을 원칙으로 합니다. 단, 다음 각 호에 해당하는 경우 회사는 승낙을 하지 않거나 사후에 이용계약을 해지할 수 있습니다.
실명이 아니거나 타인의 명의를 이용한 경우
허위 정보를 기재하거나 회사가 요구하는 내용을 기재하지 않은 경우
법령 및 약관을 위반하여 이전에 회원 자격을 상실한 적이 있는 경우

제 5 조 (회원의 의무)

회원은 다음 행위를 하여서는 안 됩니다.
가입신청 또는 변경 시 허위 내용의 등록
타인의 정보 도용
회사가 게시한 정보의 변경
회사가 정한 정보 이외의 정보(컴퓨터 프로그램 등) 등의 송신 또는 게시
회사 및 기타 제3자의 저작권 등 지적재산권에 대한 침해
회사 및 기타 제3자의 명예를 손상시키거나 업무를 방해하는 행위
외설 또는 폭력적인 메시지, 화상, 음성, 기타 공서양속에 반하는 정보를 서비스에 공개 또는 게시하는 행위

제 6 조 (개인정보 보호)

회사는 회원의 개인정보를 보호하기 위해 관련 법령에 따라 노력합니다.
회원의 개인정보는 서비스의 원활한 제공을 위하여 회원이 동의한 목적과 범위 내에서만 이용됩니다.
이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.
회사는 회원의 개인정보를 회원의 동의 없이 제3자에게 제공하지 않습니다. 다만, 법령에 따라 필요한 경우에는 예외로 합니다.

제 7 조 (서비스 이용시간)

서비스는 연중무휴, 1일 24시간 제공함을 원칙으로 합니다. 다만, 회사의 업무상 또는 기술상의 이유로 서비스가 일시 중지될 수 있으며, 이 경우 회사는 사전 또는 사후에 이를 공지합니다.
회사는 서비스를 일정 범위로 분할하여 각 범위 별로 이용 가능한 시간을 별도로 지정할 수 있으며, 이 경우 그 내용을 사전에 공지합니다.

제 8 조 (서비스 제공의 변경 및 중단)
회사는 서비스의 내용 변경 또는 중단이 필요한 경우, 회원에게 사전 공지 후 서비스를 변경 또는 중단할 수 있습니다.
회사는 천재지변, 비상사태, 기술적 결함 등 불가피한 사유가 발생한 경우 사전 통지 없이 서비스의 전부 또는 일부를 중단할 수 있습니다.

제 9 조 (계약해지 및 이용제한)

회원은 언제든지 서비스 탈퇴를 요청할 수 있으며, 회사는 즉시 회원 탈퇴를 처리합니다.
회사는 회원이 본 약관의 의무를 위반하거나 서비스의 정상적인 운영을 방해한 경우, 사전 통지 없이 이용계약을 해지하거나 서비스 이용을 제한할 수 있습니다.

제 10 조 (책임의 한계)

회사는 천재지변, 전쟁, 테러, 해킹, 디도스 공격 등 불가항력으로 인한 피해에 대해 책임을 지지 않습니다.
회사는 회원의 귀책 사유로 인한 서비스 이용 장애에 대해 책임을 지지 않습니다.

제 11 조 (준거법 및 관할법원)

이 약관은 대한민국 법령에 따라 해석 및 이행됩니다.
서비스 이용으로 발생한 분쟁에 대해 소송이 제기될 경우, 회사의 본사 소재지를 관할하는 법원을 전속 관할 법원으로 합니다.

서비스 약관에 대한 동의를 거부할 권리가 있습니다.
그러나 동의를 거부할 경우 앱이용에 제한을 받을 수 있습니다.

개인정보 처리방침 시행일자 : 2024년 06월 18일"
    </string>
    <string name="community_term_title">"커뮤니티 이용약관 동의"</string>
    <string name="community_term">"모이개 커뮤니티 이용약관

1. 소개
본 모이개 커뮤니티 이용약관(이하 "약관")은 모이개 커뮤니티 사용자가 준수해야 할 기본적인 규칙을 명시합니다. 본 커뮤니티에 가입하거나 사용하는 경우, 이용자는 본 약관에 동의한 것으로 간주됩니다.

2. 사용자 계정
2.1 계정 생성
사용자는 정확한 정보를 제공하여 계정을 생성해야 합니다. 허위 정보를 제공할 경우, 계정이 제한 또는 삭제될 수 있습니다.
2.2 개인정보의 정확성
사용자가 제공한 개인정보(이름, 전화번호, 이메일 등)의 정확성을 확인하기 위해 별도의 검증 절차를 거치지 않습니다. 따라서, 사용자가 제공한 정보의 정확성과 진위 여부에 대한 책임은 전적으로 사용자 본인에게 있습니다.
2.3 개인정보 도용에 대한 책임
타인의 개인정보를 무단으로 도용하거나 부정확한 정보를 제공하여 발생하는 모든 법적 책임은 해당 사용자가 전적으로 부담합니다. 회사는 이러한 문제로 인한 어떠한 책임도 지지 않습니다.
2.4 위반 시 조치
회사는 사용자가 타인의 개인정보를 무단으로 도용하거나4부정확한 정보를 제공하는 행위를 발견할 경우, 해당 사용자에 대한 서비스 이용을 제한하거나 중지할 수 있으며, 필요 시 법적 조치를 취할 수 있습니다.
2.5 계정 보안
사용자는 계정 정보의 보안을 유지할 책임이 있습니다. 계정의 부정 사용이 의심되는 경우, 즉시 모이개 커뮤니티에 통보해야 합니다.
이메일 : moigae4@gmail.com

3. 사용자 행동
3.1 금지된 행동
불법적이거나 부적절한 콘텐츠 게시
타인의 권리를 침해하는 행위
욕설, 폭력적, 혐오적 발언
스팸 또는 무단 광고 게시
3.2 커뮤니티 윤리
서로 존중하고 예의 바르게 행동합니다.
타인의 의견을 경청하고, 건설적인 비판을 합니다.
개인정보를 보호하고, 타인의 개인정보를 공유하지 않습니다.

4. 콘텐츠 관리
4.1 사용자 콘텐츠
사용자가 게시하는 모든 콘텐츠는 사용자의 책임입니다. 모이개 커뮤니티는 사용자가 게시한 콘텐츠를 검토할 권리가 있으며, 필요시 삭제하거나 수정할 수 있습니다.

4.2 저작권
사용자는 자신이 게시하는 모든 콘텐츠에 대한 저작권을 소유하거나 적절한 사용 권한을 가지고 있어야 합니다.

5. 서비스 이용
5.1 서비스 제공
모이개 커뮤니티는 최선을 다해 서비스를 제공하지만, 기술적 문제나 기타 사유로 인해 서비스가 중단될 수 있습니다. 이 경우 모이개 커뮤니티는 사전 통지 없이 서비스를 중단할 권리가 있습니다.

5.2 면책 조항
모이개 커뮤니티는 사용자가 게시한 콘텐츠에 대해 책임을 지지 않으며, 사용자가 커뮤니티를 사용하는 동안 발생할 수 있는 모든 문제에 대해 면책됩니다.

6. 이용약관의 변경
모이개 커뮤니티는 언제든지 본 약관을 수정할 수 있습니다. 변경된 약관은 모이개 커뮤니티에 게시된 즉시 효력이 발생합니다. 사용자는 변경된 약관에 동의하지 않을 경우, 계정을 삭제하고 커뮤니티 이용을 중단할 수 있습니다.

7. 연락처
본 약관에 대한 질문이나 의견이 있을 경우, 다음의 이메일로 문의해 주시기 바랍니다.

이메일: moigae4@gmail.com

개인정보 처리방침 시행일자 : 2024년 06월 18일"
    </string>
    <string name="please_check_desc">아래 내용을 확인해주세요</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="confirm">완료</string>
    <string name="skip">건너뛰기</string>
    <string name="cancel">취소</string>
    <string name="join_to_group">모임에 참여하시겠습니까?</string>
    <string name="please_edit_chat">입력하기</string>
    <string name="create_group">모임 생성</string>
    <string name="group_name">모임 이름</string>
    <string name="group_one_line_desc">모임 한 줄 소개</string>
    <string name="group_desc">모임 소개</string>
    <string name="category_info">카테고리 상세</string>
    <string name="dev_lang">개발 언어</string>
    <string name="dev_occupation">개발 직군</string>
    <string name="period">모집 기간</string>
    <string name="start_date">시작일</string>
    <string name="end_date">마감일</string>
    <string name="date">날짜</string>
    <string name="group_max">모집 인원</string>
    <string name="welcome_moigae">모이개에 오신것을 환영합니다</string>
    <string name="please_pick_your_dev_lang">사용하시는 개발 언어를\n골라주세요!</string>
    <string name="please_introduce_your_stack">기술스택에 대해 알려주세요\n</string>
    <string name="please_edit_your_stack">기술 스택을 입력해주세요</string>
    <string name="max_500">0/500</string>
    <string name="please_pick_your_occupation">개발 직군을 골라주세요!\n</string>
    <string name="default_user_joined_group">유저님의 가입 모임</string>
    <string name="user_joined_group">님의 가입 모임</string>
    <string name="recommend_group">추천 모임</string>
    <string name="latest_group">모이개의 최신 모임</string>
    <string name="floating_btn_create_group">+ 모임 생성</string>
    <string name="name">이름</string>
    <string name="self_introduce">자기소개</string>
    <string name="please_edit_introduce">자기소개를 작성해주세요</string>
    <string name="do_login">로그인 하기</string>
    <string name="please_pick_dev_lang">사용하시는 개발 언어를 선택해보세요!</string>
    <string name="please_pick_occupation">관심있는 직군을 선택해보세요!</string>
    <string name="stack">기술 스택</string>
    <string name="please_edit_stack">사용하신 기술이 있다면 작성해 보세요!</string>
    <string name="portfolio">포트폴리오</string>
    <string name="please_edit_portfolio">간단한 포트폴리오를 작성해 보세요!</string>
    <string name="confirm_edit">편집 완료</string>
    <string name="exit">신청 취소</string>
    <string name="pick_image">앨범에서 사진 선택</string>
    <string name="delete_image">기본 이미지 적용</string>
    <string-array name="image_edit">
        <item>@string/pick_image</item>
        <item>@string/delete_image</item>
    </string-array>
    <string name="notification">알림</string>
    <string name="use_app_without_login">로그인 없이 앱 이용하기</string>
    <string name="check">확인</string>
    <string name="group_information">모임 정보</string>
    <string name="category">카테고리</string>
    <string name="leader_id">리더 ID</string>
    <string name="hyphen">-</string>
    <string name="group_user">참가자</string>
    <string name="default_max_user">1/15</string>
    <string name="join_group">모임 참여하기</string>
    <string name="group_withdrawal">모임 탈퇴</string>
    <string name="group_delete">모임 삭제</string>
    <string name="zero">zero</string>
    <string name="option">설정</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal">회원 탈퇴</string>
    <string name="sign_up">회원 가입</string>
    <string name="check_duplication">중복확인</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="phone_number">전화번호</string>
    <string name="join_us">가입하기</string>
    <string name="profile">프로필</string>
    <string name="empty_edit">작성한 내용이 없습니다.</string>
    <string name="welcome_to_moigae">모이개에 어서오세요!</string>
    <string name="recruit_team">프로젝트에 함께 할 사람들을 모이개를 통해서 모집해보세요!</string>
    <string name="loading">Loading…</string>
    <string name="error">Error</string>
    <string name="no_result">결과가 없습니다</string>
    <string name="exceeded_Number">참가 인원 초과</string>
    <string name="home">홈</string>
    <string name="chatting">채팅</string>
    <string name="my_page">마이페이지</string>
    <string name="report_user">사용자 신고하기</string>
    <string name="block_user">사용자 차단하기</string>
    <string name="report_group">게시물 신고하기</string>
    <string name="empty_category">카테고리를 선택해주세요</string>
    <string name="unknown_view_type_error">"UNKNOWN VIEW TYPE ERROR"</string>
    <string name="empty_joined_group">가입된 모임이 없습니다.</string>
    <string name="need_login">로그인이 필요합니다.</string>
    <string name="create_success">모임 생성 성공</string>
    <string name="blank_contain">입력하지 않은 항목이 있습니다.</string>
    <string name="choice_category">카테고리를 선택해주세요.</string>
    <string name="do_create_group">모임을 생성합니다.</string>
    <string name="yyyy_MM_dd">%1$d.%2$s.%3$s</string>
    <string name="contest">공모전</string>
    <string name="delete_group_success">모임 삭제 성공</string>
    <string name="user_report_success">유저 신고 성공</string>
    <string name="user_block_success">유저 차단 성공</string>
    <string name="exit_group_success">모임 탈퇴 성공</string>
    <string name="change_leader_success">리더 변경 성공</string>
    <string name="user_ban_success">유저 강퇴 성공</string>
    <string name="move_to_chatting">채팅방 이동</string>
    <string name="over_max_user">참가 인원 수 초과</string>
    <string name="subscription_group_success">모임 참가 신청되었습니다.</string>
    <string name="change_leader">리더를 %1$s 님으로 변경합니다.</string>
    <string name="ban_user">%1$s 님을 모임에서 추방합니다.</string>
    <string name="ask_join_group">모임에 참여하시겠습니까?</string>
    <string name="go_to_login">로그인 페이지로 이동합니다.</string>
    <string name="content_desc_no_chat_list">가입 모임이 없습니다.</string>
    <string name="group">모임</string>
    <string name="content_desc_rv_chat">채팅 리스트</string>
</resources>