<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    tools:context=".presentation.onboarding.term.PrivateTermFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/private_termTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sfproiddisplaybold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvTermSubTitle"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:text="@string/please_check_desc"
        android:textSize="16sp"
        android:textColor="@color/textGrey"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <ImageView
        android:id="@+id/ivLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/termline"
        app:layout_constraintTop_toBottomOf="@id/tvTermSubTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/term_bg_rectangle"
        app:layout_constraintTop_toBottomOf="@id/ivLine">

        <TextView
            android:id="@+id/tvTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/private_term"
            android:textSize="16sp" />

    </ScrollView>

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:padding="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/check"
        android:textSize="16sp"
        android:fontFamily="@font/sfproiddisplaybold"
        app:cornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCheck">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>