<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".presentation.chatting.chattinglist.ChattingListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bg_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:text="@string/group"
            android:gravity="center"
            android:fontFamily="@font/sfproiddisplaybold"
            android:textStyle="bold"
            android:textSize="18sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChattingList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutDescription="@string/content_desc_rv_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        tools:listitem="@layout/rv_item_chatting_list"/>

    <include
        android:id="@+id/prCircular"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        layout="@layout/ui_state_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />

    <include
        android:id="@+id/includeNoResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        layout="@layout/ui_state_no_result"
        app:layoutDescription="@string/content_desc_no_chat_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />

</androidx.constraintlayout.widget.ConstraintLayout>